Refactor timestamp handling in ChatMessage and ChatSession to use Singapore timezone; simplify ProductService constructor and enhance error handling with AiServiceException